--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
                 <div class="trick__container container grid">
                     <div class="trick__content">
                         <img src="assets/img/trick-treat1-img.png" alt="" class="trick__img">
-                        <h3 class="trick__title">Toffee</h3>
-                        <span class="trick__subtitle">Candy</span>
-                        <span class="trick__price">$11.99</span>
+                        <h3 class="trick__title">MAX</h3>
+                        <span class="trick__subtitle">supply</span>
+                        <span class="trick__price">1B</span>
                         <button class="button trick__button">
                             <i class='bx bx-cart-alt trick__icon'></i>
                         </button>
