--- a/index.html
+++ b/index.html
@@ -206,19 +206,13 @@
                         <h3 class="trick__title">MAX</h3>
                         <span class="trick__subtitle">supply</span>
                         <span class="trick__price">1B</span>
-                        <button class="button trick__button">
-                            <i class='bx bx-cart-alt trick__icon'></i>
-                        </button>
                     </div>
 
                     <div class="trick__content">
                         <img src="assets/img/trick-treat2-img.png" alt="" class="trick__img">
-                        <h3 class="trick__title">Bone</h3>
-                        <span class="trick__subtitle">Accessory</span>
-                        <span class="trick__price">$8.99</span>
-                        <button class="button trick__button">
-                            <i class='bx bx-cart-alt trick__icon'></i>
-                        </button>
+                        <h3 class="trick__title">CIRCULATING</h3>
+                        <span class="trick__subtitle">supply</span>
+                        <span class="trick__price">1B</span>
                     </div>
 
                     <div class="trick__content">
@@ -226,9 +220,6 @@
                         <h3 class="trick__title">Scarecrow</h3>
                         <span class="trick__subtitle">Accessory</span>
                         <span class="trick__price">$15.99</span>
-                        <button class="button trick__button">
-                            <i class='bx bx-cart-alt trick__icon'></i>
-                        </button>
                     </div>
 
                     <div class="trick__content">
@@ -236,9 +227,6 @@
                         <h3 class="trick__title">Candy Cane</h3>
                         <span class="trick__subtitle">Candy</span>
                         <span class="trick__price">$7.99</span>
-                        <button class="button trick__button">
-                            <i class='bx bx-cart-alt trick__icon'></i>
-                        </button>
                     </div>
 
                     <div class="trick__content">
@@ -246,9 +234,6 @@
                         <h3 class="trick__title">Pumpkin</h3>
                         <span class="trick__subtitle">Candy</span>
                         <span class="trick__price">$19.99</span>
-                        <button class="button trick__button">
-                            <i class='bx bx-cart-alt trick__icon'></i>
-                        </button>
                     </div>
 
                     <div class="trick__content">
@@ -256,9 +241,6 @@
                         <h3 class="trick__title">Ghost</h3>
                         <span class="trick__subtitle">Accessory</span>
                         <span class="trick__price">$17.99</span>
-                        <button class="button trick__button">
-                            <i class='bx bx-cart-alt trick__icon'></i>
-                        </button>
                     </div>
                 </div>
             </section>
