--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
 
                     <div class="trick__content">
                         <img src="assets/img/trick-treat3-img.png" alt="" class="trick__img">
-                        <h3 class="trick__title">Scarecrow</h3>
-                        <span class="trick__subtitle">Accessory</span>
-                        <span class="trick__price">$15.99</span>
+                        <h3 class="trick__title">FAIR LAUNCH</h3>
+                        <span class="trick__subtitle">meme on</span>
+                        <span class="trick__price">BounceClub</span>
                     </div>
 
                     <div class="trick__content">
