--- a/index.html
+++ b/index.html
@@ -224,23 +224,23 @@
 
                     <div class="trick__content">
                         <img src="assets/img/trick-treat4-img.png" alt="" class="trick__img">
-                        <h3 class="trick__title">Candy Cane</h3>
-                        <span class="trick__subtitle">Candy</span>
-                        <span class="trick__price">$7.99</span>
+                        <h3 class="trick__title">NO</h3>
+                        <span class="trick__subtitle">fucking tax</span>
+                        <span class="trick__price">0% Taxes</span>
                     </div>
 
                     <div class="trick__content">
                         <img src="assets/img/trick-treat5-img.png" alt="" class="trick__img">
-                        <h3 class="trick__title">Pumpkin</h3>
-                        <span class="trick__subtitle">Candy</span>
-                        <span class="trick__price">$19.99</span>
+                        <h3 class="trick__title">LAUNCH</h3>
+                        <span class="trick__subtitle">stealth</span>
+                        <span class="trick__price">No Presale</span>
                     </div>
 
                     <div class="trick__content">
                         <img src="assets/img/trick-treat6-img.png" alt="" class="trick__img">
-                        <h3 class="trick__title">Ghost</h3>
-                        <span class="trick__subtitle">Accessory</span>
-                        <span class="trick__price">$17.99</span>
+                        <h3 class="trick__title">FUELED</h3>
+                        <span class="trick__subtitle">by</span>
+                        <span class="trick__price">Community</span>
                     </div>
                 </div>
             </section>
