--- a/index.html
+++ b/index.html
@@ -184,12 +184,10 @@
             <section class="section about" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <h2 class="section__title about__title">About Halloween <br> Night</h2>
-                        <p class="about__description">Night of all the saints, or all the dead, is celebrated on October 31 and it is a 
-                            very fun international celebration, this celebration comes from ancient origins, and is already 
-                            celebrated by everyone.
+                        <h2 class="section__title about__title">About $BOUNCE <br> Ca: 0x0645800C916641842Da2De8158931806C95B9Dda</h2>
+                        <p class="about__description">Bounce is memecoin born in Bouncebit Ecosystem it is believe to be the first meme in the chain. Leap forward by pure memetic power of bounce community. 
                         </p>
-                        <a href="#" class="button">Know more</a>
+                        <a href="https://twitter.com/so_bounce" class="button">Follow us on Twitter</a>
                     </div>
 
                     <img src="assets/img/about-img.png" alt="" class="about__img">
