--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <section class="section about" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <h2 class="section__title about__title">About $BOUNCE <br> Ca: 0x0645800C916641842Da2De8158931806C95B9Dda</h2>
+                        <h2 class="section__title about__title">WTF IS $BOUNCE?</h2>
                         <p class="about__description">Bounce is memecoin born in Bouncebit Ecosystem it is believe to be the first meme in the chain. Leap forward by pure memetic power of bounce community. 
                         </p>
                         <a href="https://twitter.com/so_bounce" class="button">Follow us on Twitter</a>
