--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <h2 class="section__title about__title">WTF IS $BOUNCE?</h2>
                         <p class="about__description">Bounce is memecoin born in Bouncebit Ecosystem it is believe to be the first meme in the chain. Leap forward by pure memetic power of bounce community. 
                         </p>
-                        <a href="https://twitter.com/so_bounce" class="button">Follow us on Twitter</a>
+                        <a href="https://twitter.com/so_bounce" target="_blank" class="button">Follow us on Twitter</a>
                     </div>
 
                     <img src="assets/img/about-img.png" alt="" class="about__img">
