--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
             <!--==================== NEW ARRIVALS ====================-->
             <section class="section new" id="new">
-                <h2 class="section__title">New Arrivals</h2>
+                <h2 class="section__title">HOW TO GET $BOUNCE</h2>
 
                 <div class="new__container container">
                     <div class="swiper new-swiper">
