--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             </div>
         
                             <div class="new__content swiper-slide">
-                                <img src="assets/img/new6-img.png" alt="" class="new__img">
+                                <img src="assets/img/walleticon.png" alt="" class="new__img">
                                 <h3 class="new__title">Have a Wallet</h3>
                                 <span class="new__subtitle">Get Metamask, OKX Wallet or your EVM compatible wallet of choice.</span>
         
