--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div class="swiper new-swiper">
                         <div class="swiper-wrapper">
                             <div class="new__content swiper-slide">
-                                <img src="assets/img/new1-img.png" alt="" class="new__img">
+                                <img src="assets/img/rpcicon.png" alt="" class="new__img">
                                 <h3 class="new__title">Add RPC Mainnet</h3>
                                 <span class="new__subtitle">You might need to add the Bouncebit network to your wallet </br> </br> Network Name: BounceBit Mainnet </br> RPC Url: https://fullnode-mainnet.bouncebitapi.com/ </br> Chain ID: 6001 </br> Currency Symbol: BB </br> Block explorer URL: https://bbscan.io/ </span>
                                 
