--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
                             </div>
         
                             <div class="new__content swiper-slide">
-                                <img src="assets/img/new2-img.png" alt="" class="new__img">
-                                <h3 class="new__title">Halloween Candle</h3>
-                                <span class="new__subtitle">Accessory</span>
+                                <img src="assets/img/bbcoinicon.png" alt="" class="new__img">
+                                <h3 class="new__title">Get some $BB</h3>
+                                <span class="new__subtitle">Have Bouncebit main token in your wallet to buy $BOUNCE. If you don’t have $BB, you can buy on exchanges like BINANCE & BITGET and send it to your wallet./span>
                             </div>
         
                             <div class="new__content swiper-slide">
