--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                             <div class="new__content swiper-slide">
                                 <img src="assets/img/bbcoinicon.png" alt="" class="new__img">
                                 <h3 class="new__title">Get some $BB</h3>
-                                <span class="new__subtitle">Have Bouncebit main token in </br> your wallet to buy $BOUNCE. If you don’t have $BB, you can buy on exchanges like BINANCE & BITGET and send it to your wallet. </span>
+                                <span class="new__subtitle">Have Bouncebit main token in </br> your wallet to buy $BOUNCE. </br> If you don’t have $BB, you can buy on exchanges </br> like BINANCE & BITGET and send it to your wallet. </span>
                                     
                             </div>
         
