--- a/index.html
+++ b/index.html
@@ -297,16 +297,12 @@
             <!--==================== OUR NEWSLETTER ====================-->
             <section class="section newsletter">
                 <div class="newsletter__container container">
-                    <h2 class="section__title">Our Newsletter</h2>
+                    <h2 class="section__title">GET BOUNCE</h2>
                     <p class="newsletter__description">
-                        Promotion new products and sales. Directly to your inbox
+                        $BOUNCE is a fictitious memecoin and the content created on this website/social channels is just for fun.  It does not constitute as financial or professional advice.   Engaging in cryptocurrencies carries inherent risks and you should do your own research prior to making any purchases.  The price of the token may fluctuate beyond our control. 
                     </p>
 
-                    <form action="" class="newsletter__form">
-                        <input type="text" placeholder="Enter your email" class="newsletter__input">
-                        <button class="button">
-                            Subscribe
-                        </button>
+                        <a href="https://club.bouncebit.io/memecoin/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button">BUY $BOUNCE</a>
                     </form>
                 </div>
             </section>
