--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         $BOUNCE is a fictitious memecoin and the content created on this website/social channels is just for fun.  It does not constitute as financial or professional advice.   Engaging in cryptocurrencies carries inherent risks and you should do your own research prior to making any purchases.  The price of the token may fluctuate beyond our control. 
                     </p>
 
-                        <a href="https://club.bouncebit.io/memecoin/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button"><center>BUY $BOUNCE</center></a>
+                        <a href="https://club.bouncebit.io/memecoin/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button"><center>BUY $BOUNCE ON BOUNCECLUB</center></a>
                     </form>
                 </div>
             </section>
