--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <a href="#new" class="nav__link">New</a>
                         </li>
 
-                        <a href="#" class="button button--ghost">Support</a>
+                        <a href="https://club.bouncebit.io/memecoin/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button button--ghost">GET BOUNCE</a>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
