--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#new" class="nav__link">New</a>
+                            <a href="#new" class="nav__link">How to get $BOUNCE</a>
                         </li>
 
                         <a href="https://club.bouncebit.io/memecoin/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button button--ghost">GET BOUNCE</a>
