--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="assets/img/logo.png" alt="" class="nav__logo-img">
+                    <img src="assets/img/bouncelogo.png" alt="" class="nav__logo-img">
                     Halloween
                 </a>
 
