--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="nav container">
                 <a href="#" class="nav__logo">
                     <img src="assets/img/bouncelogo.png" alt="" class="nav__logo-img">
-                    Halloween
+                    BOUNCE
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -313,8 +313,8 @@
                 <div class="footer__container container grid">
                     <div class="footer__content">
                         <a href="#" class="footer__logo">
-                            <img src="assets/img/logo.png" alt="" class="footer__logo-img">
-                            Halloween
+                            <img src="assets/img/bouncelogo.png" alt="" class="footer__logo-img">
+                            BOUNCE
                         </a>
 
                         <p class="footer__description">Enjoy the scariest night <br> of your life.</p>
