--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
                 <div class="trick__container container grid">
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat1-img.png" alt="" class="trick__img">
+                        <img src="assets/img/smiling.png" alt="" class="trick__img">
                         <h3 class="trick__title">MAX</h3>
                         <span class="trick__subtitle">supply</span>
                         <span class="trick__price">1B</span>
