--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div>
 
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat2-img.png" alt="" class="trick__img">
+                        <img src="assets/img/happy.png" alt="" class="trick__img">
                         <h3 class="trick__title">CIRCULATING</h3>
                         <span class="trick__subtitle">supply</span>
                         <span class="trick__price">1B</span>
