--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
                     </div>
 
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat3-img.png" alt="" class="trick__img">
+                        <img src="assets/img/cool.png" alt="" class="trick__img">
                         <h3 class="trick__title">FAIR LAUNCH</h3>
                         <span class="trick__subtitle">meme on</span>
                         <span class="trick__price">BounceClub</span>
                     </div>
 
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat4-img.png" alt="" class="trick__img">
+                        <img src="assets/img/crazy.png" alt="" class="trick__img">
                         <h3 class="trick__title">NO</h3>
                         <span class="trick__subtitle">fucking tax</span>
                         <span class="trick__price">0% Taxes</span>
