--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
                     </div>
 
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat5-img.png" alt="" class="trick__img">
+                        <img src="assets/img/smile.png" alt="" class="trick__img">
                         <h3 class="trick__title">LAUNCH</h3>
                         <span class="trick__subtitle">stealth</span>
                         <span class="trick__price">No Presale</span>
                     </div>
 
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat6-img.png" alt="" class="trick__img">
+                        <img src="assets/img/great.png" alt="" class="trick__img">
                         <h3 class="trick__title">FUELED</h3>
                         <span class="trick__subtitle">by</span>
                         <span class="trick__price">Community</span>
