--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#trick" class="nav__link">Bouncenomics</a>
+                            <a href="#trick" class="nav__link">Bounceeenomics</a>
                         </li>
 
                         <li class="nav__item">
@@ -196,7 +196,7 @@
 
             <!--==================== TRICK OR TREAT ====================-->
             <section class="section trick" id="trick">
-                <h2 class="section__title">BOUNCENOMICS</h2>
+                <h2 class="section__title">BOUNCEEENOMICS</h2>
 
                 <div class="trick__container container grid">
                     <div class="trick__content">
