--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
             <section class="section discount">
                 <div class="discount__container container grid">
                     <div class="discount__data">
-                        <h2 class="discount__title">50% Discount <br> On New Products</h2>
-                        <a href="#" class="button">Go to new</a>
+                        <h2 class="discount__title">Join <br> us on</h2>
+                        <a href="https://t.me/so_bounce" target="_blank" class="button">TELEGRAM</a>
                     </div>
 
-                    <img src="assets/img/discount-img.png" alt="" class="discount__img">
+                    <img src="assets/img/bounceleft.png" alt="" class="discount__img">
                 </div>
             </section>
 
