--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <a href="https://twitter.com/so_bounce" target="_blank" class="button">Follow us on Twitter</a>
                     </div>
 
-                    <img src="assets/img/about-img.png" alt="" class="about__img">
+                    <img src="assets/img/bounceright.png" alt="" class="about__img">
                 </div>
             </section>
 
