--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <a href="https://t.me/so_bounce" target="_blank" class="button">TELEGRAM</a>
                     </div>
 
-                    <img src="assets/img/bounceleft.png" alt="" class="discount__img">
+                    <img src="assets/img/bouncetelegram.png" alt="" class="discount__img">
                 </div>
             </section>
 
