--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <section class="section discount">
                 <div class="discount__container container grid">
                     <div class="discount__data">
-                        <h2 class="discount__title">Join <br> us on</h2>
+                        <h2 class="discount__title">Join us on..<br></h2>
                         <a href="https://t.me/so_bounce" target="_blank" class="button">TELEGRAM</a>
                     </div>
 
