--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="discount__container container grid">
                     <div class="discount__data">
                         <h2 class="discount__title">Join us on..<br></h2>
-                        <a href="https://t.me/so_bounce" target="_blank" class="button">TELEGRAM</a>
+                        <a href="https://t.me/so_bounce" target="_blank" class="button">Telegram Community</a>
                     </div>
 
                     <img src="assets/img/bouncetelegram.png" alt="" class="discount__img">
