--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
 
                 <span class="footer__copy">&#169; Bounce. All rigths reserved</span>
 
-                <img src="assets/img/footer1-img.png" alt="" class="footer__img-one">
-                <img src="assets/img/footer2-img.png" alt="" class="footer__img-two">
+                <img src="assets/img/bouncefooter1.png" alt="" class="footer__img-one">
+                <img src="assets/img/bouncefooter2.png" alt="" class="footer__img-two">
             </footer>
 
             <!--=============== SCROLL UP ===============-->
