--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#trick" class="nav__link">Bounceeenomics</a>
+                            <a href="#bounceeenomics" class="nav__link">Bounceeenomics</a>
                         </li>
 
                         <li class="nav__item">
@@ -82,7 +82,7 @@
     
                                 <div class="home__data">
                                     <h3 class="home__subtitle">#1 Top Scariest Ghost</h3>
-                                    <h1 class="home__title">UOOOO <br> TRICK OR <br> TREAT!!</h1>
+                                    <h1 class="home__title">UOOOO <br> bounceeenomics OR <br> TREAT!!</h1>
                                     <p class="home__description">Hi, I'm Reiza, people call me "El Labu". I am currently trying to learn 
                                         something new, building my own bike with parts made only in Malaysia.
                                     </p>
@@ -194,51 +194,51 @@
                 </div>
             </section>
 
-            <!--==================== TRICK OR TREAT ====================-->
-            <section class="section trick" id="trick">
+            <!--==================== bounceeenomics OR TREAT ====================-->
+            <section class="section bounceeenomics" id="bounceeenomics">
                 <h2 class="section__title">BOUNCEEENOMICS</h2>
 
-                <div class="trick__container container grid">
-                    <div class="trick__content">
-                        <img src="assets/img/smiling.png" alt="" class="trick__img">
-                        <h3 class="trick__title">MAX</h3>
-                        <span class="trick__subtitle">supply</span>
-                        <span class="trick__price">1B</span>
+                <div class="bounceeenomics__container container grid">
+                    <div class="bounceeenomics__content">
+                        <img src="assets/img/smiling.png" alt="" class="bounceeenomics__img">
+                        <h3 class="bounceeenomics__title">MAX</h3>
+                        <span class="bounceeenomics__subtitle">supply</span>
+                        <span class="bounceeenomics__price">1B</span>
                     </div>
 
-                    <div class="trick__content">
-                        <img src="assets/img/happy.png" alt="" class="trick__img">
-                        <h3 class="trick__title">CIRCULATING</h3>
-                        <span class="trick__subtitle">supply</span>
-                        <span class="trick__price">1B</span>
+                    <div class="bounceeenomics__content">
+                        <img src="assets/img/happy.png" alt="" class="bounceeenomics__img">
+                        <h3 class="bounceeenomics__title">CIRCULATING</h3>
+                        <span class="bounceeenomics__subtitle">supply</span>
+                        <span class="bounceeenomics__price">1B</span>
                     </div>
 
-                    <div class="trick__content">
-                        <img src="assets/img/cool.png" alt="" class="trick__img">
-                        <h3 class="trick__title">FAIR LAUNCH</h3>
-                        <span class="trick__subtitle">meme on</span>
-                        <span class="trick__price">BounceClub</span>
+                    <div class="bounceeenomics__content">
+                        <img src="assets/img/cool.png" alt="" class="bounceeenomics__img">
+                        <h3 class="bounceeenomics__title">FAIR LAUNCH</h3>
+                        <span class="bounceeenomics__subtitle">meme on</span>
+                        <span class="bounceeenomics__price">BounceClub</span>
                     </div>
 
-                    <div class="trick__content">
-                        <img src="assets/img/crazy.png" alt="" class="trick__img">
-                        <h3 class="trick__title">NO</h3>
-                        <span class="trick__subtitle">fucking tax</span>
-                        <span class="trick__price">0% Taxes</span>
+                    <div class="bounceeenomics__content">
+                        <img src="assets/img/crazy.png" alt="" class="bounceeenomics__img">
+                        <h3 class="bounceeenomics__title">NO</h3>
+                        <span class="bounceeenomics__subtitle">fucking tax</span>
+                        <span class="bounceeenomics__price">0% Taxes</span>
                     </div>
 
-                    <div class="trick__content">
-                        <img src="assets/img/smile.png" alt="" class="trick__img">
-                        <h3 class="trick__title">LAUNCH</h3>
-                        <span class="trick__subtitle">stealth</span>
-                        <span class="trick__price">No Presale</span>
+                    <div class="bounceeenomics__content">
+                        <img src="assets/img/smile.png" alt="" class="bounceeenomics__img">
+                        <h3 class="bounceeenomics__title">LAUNCH</h3>
+                        <span class="bounceeenomics__subtitle">stealth</span>
+                        <span class="bounceeenomics__price">No Presale</span>
                     </div>
 
-                    <div class="trick__content">
-                        <img src="assets/img/great.png" alt="" class="trick__img">
-                        <h3 class="trick__title">FUELED</h3>
-                        <span class="trick__subtitle">by</span>
-                        <span class="trick__price">Community</span>
+                    <div class="bounceeenomics__content">
+                        <img src="assets/img/great.png" alt="" class="bounceeenomics__img">
+                        <h3 class="bounceeenomics__title">FUELED</h3>
+                        <span class="bounceeenomics__subtitle">by</span>
+                        <span class="bounceeenomics__price">Community</span>
                     </div>
                 </div>
             </section>
