--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@
                                 <div class="home__data">
                                     <h3 class="home__subtitle">#2 top Best duo</h3>
                                     <h1 class="home__title">BRING BACK <br> MY COTTON <br> CANDY</h1>
-                                    <p class="home__description">Adino steals cotton candy from his brother and eats them all in one bite, 
-                                        a hungry beast. Grahami can no longer contain his anger towards Adino.
+                                    <p class="home__description">Contract Address: </br> 0x0645800C916641842Da2De8158931806C95B9Dda
                                     </p>
 
                                     <div class="home__buttons">
-                                        <a href="#" class="button">Book Now</a>
+                                        <a href="https://bbscan.io/token/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button">Check on BBSCAN</a>
                                         <a href="#" class="button--link button--flex">Track Record <i class='bx bx-right-arrow-alt button__icon'></i></a>
                                     </div>
                                 </div>
