--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@
                                 <div class="home__data">
                                     <h3 class="home__subtitle">#1 Top Scariest Ghost</h3>
                                     <h1 class="home__title">UOOOO <br> bounceeenomics OR <br> TREAT!!</h1>
-                                    <p class="home__description">Hi, I'm Reiza, people call me "El Labu". I am currently trying to learn 
-                                        something new, building my own bike with parts made only in Malaysia.
+                                    <p class="home__description">Contract Address: </br> 0x0645800C916641842Da2De8158931806C95B9Dda
                                     </p>
 
                                     <div class="home__buttons">
-                                        <a href="#" class="button">Book Now</a>
+                                        <a href="https://bbscan.io/token/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button">Check on BBSCAN</a>
                                         <a href="#" class="button--link button--flex">Track Record <i class='bx bx-right-arrow-alt button__icon'></i></a>
                                     </div>
                                 </div>
