--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                                     <div class="home__buttons">
                                         <a href="https://bbscan.io/token/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button">Check on BBSCAN</a>
-                                        <a href="#" class="button--link button--flex">Track Record <i class='bx bx-right-arrow-alt button__icon'></i></a>
+                                        <a href="#" class="button--link button--flex">Swipe & Bounce <i class='bx bx-right-arrow-alt button__icon'></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
 
                                     <div class="home__buttons">
                                         <a href="https://bbscan.io/token/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="button">Check on BBSCAN</a>
-                                        <a href="#" class="button--link button--flex">Track Record <i class='bx bx-right-arrow-alt button__icon'></i></a>
+                                        <a href="#" class="button--link button--flex">Swipe & Bounce <i class='bx bx-right-arrow-alt button__icon'></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -143,7 +143,7 @@
 
                                     <div class="home__buttons">
                                         <a href="#" class="button">Book Now</a>
-                                        <a href="#" class="button--link button--flex">Track Record <i class='bx bx-right-arrow-alt button__icon'></i></a>
+                                        <a href="#" class="button--link button--flex">Swipe & Bounce <i class='bx bx-right-arrow-alt button__icon'></i></a>
                                     </div>
                                 </div>
                             </div>
