--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                     <div class="home__indicator"></div>
     
                                     <div class="home__details-img">
-                                        <h4 class="home__details-title">The Labu “Reiza”</h4>
-                                        <span class="home__details-subtitle">The Living Pumpkin</span>
+                                        <h4 class="home__details-title">We bounce so much...”</h4>
+                                        <span class="home__details-subtitle">我们如此弹跳</span>
                                     </div>
                                 </div>
     
