--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             BOUNCE
                         </a>
 
-                        <p class="footer__description">Enjoy the scariest night <br> of your life.</p>
+                        <p class="footer__description">We bounce so much <br> 我们如此弹跳</p>
                         
                         <div class="footer__social">
                             <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
