--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                     <div class="home__indicator"></div>
     
                                     <div class="home__details-img">
-                                        <h4 class="home__details-title">We bounce so much...”</h4>
+                                        <h4 class="home__details-title">We bounce so much”</h4>
                                         <span class="home__details-subtitle">我们如此弹跳</span>
                                     </div>
                                 </div>
