--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
                                 <div class="home__data">
                                     <h3 class="home__subtitle">#SOooo BBbbounce</h3>
-                                    <h1 class="home__title">HEYYY <br> TTTTHERE IM <br> BOUNCEEEEEeee!!</h1>
+                                    <h1 class="home__title">HEYYY <br> TTTTHERE IM <br> BOUNCEEEeee!</h1>
                                     <p class="home__description">Contract Address: </br> 0x0645800C916641842Da2De8158931806C95B9Dda
                                     </p>
 
