--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <section class="swiper-slide">
                             <div class="home__content grid">
                                 <div class="home__group">
-                                    <img src="assets/img/home2-img.png" alt="" class="home__img">
+                                    <img src="assets/img/bounce2.png" alt="" class="home__img">
                                     <div class="home__indicator"></div>
     
                                     <div class="home__details-img">
@@ -125,7 +125,7 @@
                         <section class="swiper-slide">
                             <div class="home__content grid">
                                 <div class="home__group">
-                                    <img src="assets/img/home3-img.png" alt="" class="home__img">
+                                    <img src="assets/img/bounce3.png" alt="" class="home__img">
                                     <div class="home__indicator"></div>
     
                                     <div class="home__details-img">
