--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
                         
                         <div class="footer__social">
                             <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
-                                <i class='bx bxl-facebook'></i>
+                                <i class='bx bxl-telegram'></i>
                             </a>
                             <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
-                                <i class='bx bxl-instagram-alt' ></i>
+                                <i class='bx bxl-telegram' ></i>
                             </a>
-                            <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                            <a href="https://twitter.com/so_bounce" target="_blank" class="footer__social-link">
                                 <i class='bx bxl-twitter' ></i>
                             </a>
                         </div>
