--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
                         <p class="footer__description">We bounce so much <br> 我们如此弹跳</p>
                         
                         <div class="footer__social">
-                            <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                            <a href="https://t.me/so_bounce" target="_blank" class="footer__social-link">
                                 <i class='bx bxl-telegram'></i>
                             </a>
-                            <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                            <a href="https://t.me/so_bouncebit" target="_blank" class="footer__social-link">
                                 <i class='bx bxl-telegram' ></i>
                             </a>
                             <a href="https://twitter.com/so_bounce" target="_blank" class="footer__social-link">
