--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
                                 <a href="#" class="footer__link">About Us</a>
                             </li>
                             <li>
-                                <a href="#" class="footer__link">Features</a>
+                                <a href="#bounceeenomics" class="footer__link">Bounceeenomics</a>
                             </li>
                             <li>
-                                <a href="#" class="footer__link">News</a>
+                                <a href="#howtobuy" class="footer__link">How to buy</a>
                             </li>
                         </ul>
                     </div>
