--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         
                         <ul class="footer__links">
                             <li>
-                                <a href="#" class="footer__link">About Us</a>
+                                <a href="#about" class="footer__link">About $BOUNCE</a>
                             </li>
                             <li>
                                 <a href="#bounceeenomics" class="footer__link">Bounceeenomics</a>
