--- a/index.html
+++ b/index.html
@@ -362,17 +362,17 @@
                     </div>
 
                     <div class="footer__content">
-                        <h3 class="footer__title">Our Company</h3>
+                        <h3 class="footer__title">Our Links</h3>
                         
                         <ul class="footer__links">
                             <li>
-                                <a href="#" class="footer__link">Blog</a>
+                                <a href="https://bbscan.io/token/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="footer__link">Bounce on BBSCAN</a>
                             </li>
                             <li>
-                                <a href="#" class="footer__link">About us</a>
+                                <a href="https://club.bouncebit.io/memecoin/0x0645800C916641842Da2De8158931806C95B9Dda" target="_blank" class="footer__link">Bounce on BounceClub</a>
                             </li>
                             <li>
-                                <a href="#" class="footer__link">Our mision</a>
+                                <a href="https://club.bouncebit.io/defi/swap" target="_blank" class="footer__link">Swap</a>
                             </li>
                         </ul>
                     </div>
